Edit TN0043 Conclusion and Further reading

--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -4,8 +4,8 @@ id: TN0043
 tags: [architecture-patterns]
 ---
 
-One of the advantages of using GraphQL is that it provides an abstraction between service consumers and 
-the teams maintaining the backend services. 
+One of the advantages of using GraphQL is that it provides an abstraction between service consumers and
+the teams maintaining the backend services.
 
 In a backend-for-frontend (BFF) architecture, each BFF connects to any number of backend services. As you add new BFFs for each application, the number of connections proliferates, and changes to any backend services have major implications.
 
@@ -84,9 +84,10 @@ flowchart LR
 
 ## Service migration example
 
-Suppose a company has an architecture with ten applications, each with its own BFF. The company is migrating one of many backend APIs to a different technology. As a result of the BFFs owning data orchestration, the organization must update ten different BFFs. 
+Suppose a company has an architecture with ten applications, each with its own BFF. The company is migrating one of many backend APIs to a different technology. As a result of the BFFs owning data orchestration, the organization must update ten different BFFs.
 
 To avoid breaking changes, clients must:
+
 - be aware of what is happening during those change,
 - track timelines,
 - and track changes to field names.
@@ -152,7 +153,6 @@ flowchart LR
   bff10 -.-> newservice
 ```
 
-
 If the company used GraphQL as an abstraction layer, the consumers wouldn't need to know about this change because the organization has abstracted backend APIs behind a graph schema. The only change needed is at the GraphQL layer.
 
 ```mermaid
@@ -191,9 +191,10 @@ flowchart LR
 As a company grows, this could eliminate hundreds of updates, deployments, and dependencies due to the reduced impact of changes to backend services.
 
 ## Conclusion
-GraphQL is a powerful tool for abstracting away the complexities of your backend services from front-end consumers. It can shield your consumers from major changes to those services while reducing the impact of those changes across your architecture. Ultimately, it provides choice and control to your consumers without negatively impacting your backend services.
 
-## Further Reading
+GraphQL is a powerful tool for abstracting away the complexities of backend services from front-end consumers. It can shield consumers from major changes to those services while reducing the impact of those changes. Ultimately, it provides choice and control to consumers without negatively impacting backend services.
 
-- [Using Graphql and REST Together](/technotes/TN0044-graphql-and-rest-together/)
-- Blog Post on xolv.io: [How to Move from BFFs to GraphQL Federation](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
+## Further reading
+
+- [Using GraphQL and REST Together](/technotes/TN0044-graphql-and-rest-together/)
+- Blog post on xolv.io: [How to Move from BFFs to GraphQL Federation](https://www.xolv.io/blog/articles/how-to-move-from-bffs-to-graphql-federation/)
