--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -21,7 +21,7 @@ It's common to hear GraphQL and REST pitted against each other as competing tech
 This page outlines:
 
 - Approaches organizations typically take
-- Where GraphQL fits into the architectural toolbox best
+- Where GraphQL best fits into the architectural toolbox
 - How it can help drive a resilient API strategy
 
 ## Traditional N-tier architecture
@@ -151,7 +151,7 @@ An API should have a defined stewardship and governance model, including appropr
 
 <Tip>
 
-Read more on [Supergraph stewardship](/technotes/TN0025-supergraph-stewardship/)
+Read more on [Supergraph stewardship](/technotes/TN0025-supergraph-stewardship/).
 
 </Tip>
 
@@ -287,7 +287,7 @@ flowchart LR
 
 #### Analysis
 
-BFFs can be a reasonable approach to the issues of the client-managed approach. The BFF approach lets data get aggregated from many backend APIs. However, as your organization adds more and more clients, this approach can also grow out of control. This can especially become an issue for organizations using micro-frontends. Maintainability and governance can become increasingly challenging.
+BFFs can offer a viable solution for addressing certain issues associated with the client-managed approach. The BFF approach lets consumers aggregate data from many backend APIs. However, as your organization adds more and more clients, this approach can also grow out of control. This can especially become an issue for organizations using micro-frontends. Maintainability and governance can become increasingly challenging.
 
 #### Problems
 
